[gd_scene load_steps=44 format=2]

[ext_resource path="res://assests/warrior spritesheet calciumtrice.png" type="Texture" id=1]
[ext_resource path="res://player/warrior_ncb_bck.gd" type="Script" id=2]
[ext_resource path="res://assests/sound-effects/step.wav" type="AudioStream" id=3]
[ext_resource path="res://assests/ui/healthbar/VIDA_10.png" type="Texture" id=4]
[ext_resource path="res://assests/ui/healthbar/VIDA_0.png" type="Texture" id=5]
[ext_resource path="res://player/Camera2D.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.25549
height = 18.1644

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "attack",
"speed": 36.0
} ]

[sub_resource type="Gradient" id=33]
offsets = PoolRealArray( 0, 0.459259, 1 )
colors = PoolColorArray( 0.309804, 0.184314, 0.0666667, 0.764706, 0.537255, 0.435294, 0.337255, 0.890196, 0.466667, 0.466667, 0.466667, 0.941176 )

[sub_resource type="GradientTexture" id=34]
gradient = SubResource( 33 )

[sub_resource type="ParticlesMaterial" id=35]
emission_shape = 2
emission_box_extents = Vector3( 4, 1, 1 )
flag_disable_z = true
spread = 16.03
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
color_ramp = SubResource( 34 )

[sub_resource type="CapsuleShape2D" id=36]
radius = 12.0686
height = 14.624

[sub_resource type="StyleBoxEmpty" id=37]

[node name="warrior_bck" type="KinematicBody2D" groups=[
"camera_shaker",
]]
position = Vector2( -0.00549316, 0.0106888 )
script = ExtResource( 2 )

[node name="movementCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -24.233
pitch_scale = 1.28

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 32 )
animation = "attack"
frame = 9
playing = true

[node name="Particles2D" type="Particles2D" parent="AnimatedSprite"]
show_behind_parent = true
position = Vector2( -0.0667401, 15.3606 )
rotation = 3.31613
amount = 24
lifetime = 0.5
process_material = SubResource( 35 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_speed = 40.0
script = ExtResource( 6 )

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = -188.997
margin_top = -103.582
margin_right = 189.003
margin_bottom = -65.5824
rect_scale = Vector2( 0.142782, 0.258622 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBarText" type="Label" parent="."]
margin_left = -170.0
margin_top = -103.0
margin_right = -141.0
margin_bottom = -87.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pickupArea" type="Area2D" parent="." groups=[
"player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickupArea"]
shape = SubResource( 36 )

[node name="scoreText" type="RichTextLabel" parent="."]
margin_left = -190.0
margin_top = 93.0
margin_bottom = 111.0
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scorePupText" type="RichTextLabel" parent="."]
margin_left = -190.0
margin_top = -81.0
margin_right = 113.0
margin_bottom = -41.0
visible_characters = 0
percent_visible = 0.0
text = "Double Score: 25s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damagePupText" type="RichTextLabel" parent="."]
margin_left = -191.0
margin_top = -67.0
margin_right = 53.0
margin_bottom = -47.0
custom_styles/focus = SubResource( 37 )
visible_characters = 0
percent_visible = 0.0
text = "Double Damage"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="pickupArea" to="." method="_on_damage_area_entered"]
[connection signal="area_exited" from="pickupArea" to="." method="_on_damage_area_exited"]
